# ClimdexDash

./: .env  README.md  dummy.txt  hello.py  pyproject.toml  temp.ipynb
src/components/: indices_card.py  layout.py  mapPlan.py  tp_timeseries.py
src/data/: .env  indices.py  source.py
